--- a/css/index.css
+++ b/css/index.css
@@ -65,3 +65,13 @@ html, body {
     width: 100%;
     resize: none;
 }
+
+#textButton {
+    font-size: 1.2rem;
+    opacity: 1;
+}
+
+#urlButton {
+    font-size: 1rem;
+    opacity: 0.3;
+}
