--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,12 @@ html, body {
     width: 100%;
 }
 
+#result {
+    display: none;
+    height: 100%;
+    width: 100%;
+}
+
 .contentRow {
     margin-right: 0px;
     margin-left: 0px;
@@ -39,6 +45,10 @@ html, body {
 .footButton {
     padding: 5px;
     height: 10%;
+}
+
+.leftButton {
+    float: left;
 }
 
 .centerButton {
