--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@ html, body {
 .contentRow {
     margin-right: 0px;
     margin-left: 0px;
-    height: 85%;
+    height: 80%;
     width: 100%;
 }
 
@@ -40,6 +40,13 @@ html, body {
     height: 10%;
     text-align: center;
     padding: 10px;
+}
+
+.resultText {
+    margin-right: 0px;
+    margin-left: 0px;
+    height: 90%;
+    width: 100%;
 }
 
 .footButton {
